--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -7,20 +7,28 @@
 }
 
 body {
-	background-color: #f0f0f0;
+	/* background-color: #f0f0f0; */
+	background-image: url(https://img.freepik.com/premium-photo/grey-abstract-background_427757-34.jpg);
 	font-size: 1.2rem;
 	font-family: "Inter", sans-serif;
 }
 
-.search-form {
-	position: relative;
+.header {
 	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-	padding: 2rem 0;
+	justify-content: space-between;
+	padding: 1rem 2rem;
 	background-color: #fff;
 	box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.04);
+}
+
+.search-form {
+	/* position: relative;
+	display: flex;
+	justify-content: center;
+	align-items: center; */
+	padding: 1rem 2rem;
+	background-color: #fff;
+	/* box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.04); */
 }
 
 .search-form .input-control {
@@ -76,7 +84,7 @@ body {
 	height: 14rem;
 	width: 37rem;
 	top: 12%;
-	left: 50%;
+	left: 79%;
 	overflow: auto;
 	transform: translateX(-50%);
 	z-index: 5;
