--- a/src/styles/Pokemon.module.css
+++ b/src/styles/Pokemon.module.css
@@ -63,3 +63,19 @@
 	border-radius: 12px;
 	box-shadow: 2px 3px 5px rgba(0, 0, 0, 0.1);
 }
+
+.Back {
+	background-color: #ff0000;
+	border: none;
+	color: white;
+	padding: 0.5rem 1rem;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	font-size: 16px;
+	cursor: pointer;
+	font-family: inherit;
+	font-size: inherit;
+	font-weight: 500;
+	border-radius: 8px;
+}
